# minetest

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .luacheckrc  .mailmap  .pre-commit-config.yaml  .travis.yml  AppImageBuilder.yml  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CNAME  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Doxyfile.in  LICENSE.txt  Makefile  Makefile.bak  Privacy policy.md  README  README.Pestilence.txt  README.md  README.txt  WARNING.txt  addlicensecomments.sh  all.do  cmake_install.cmake  collision.cpp  (+27 more)
android/: .gitignore  CMakeLists.txt  Makefile  SDL_Java_RMB_fix.patch  build.gradle  gradle.properties  gradlew  keystore-minetest.jks  openssl-CMakeLists.txt  openssl-buildinf.h.cmake  openssl-crypto-CMakeLists.txt  openssl-ssl-CMakeLists.txt  settings.gradle  sqlite3-CMakeLists.txt
android/app/: build.gradle
android/jni/: Application.mk  Deps.mk
android/native/: build.gradle
android/patches/: irrlicht-back_button.patch  irrlicht-texturehack.patch  irrlicht-touchcount.patch
irr/: .editorconfig  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
irr/cmake/: FindOpenGLES2.cmake
irr/examples/: CMakeLists.txt
irr/include/: CIndexBuffer.h  CMeshBuffer.h  CSkinnedMesh.h  CVertexBuffer.h  EAttributes.h  ECullingTypes.h  EDebugSceneTypes.h  EDeviceTypes.h  EDriverFeatures.h  EDriverTypes.h  EFocusFlags.h  EGUIAlignment.h  EGUIElementTypes.h  EHardwareBufferFlags.h  EMaterialProps.h  EMaterialTypes.h  EPrimitiveTypes.h  EReadFileType.h  ESceneNodeTypes.h  EShaderTypes.h  EVertexAttributes.h  EVideoTypes.h  IAnimatedMesh.h  IAnimatedMeshSceneNode.h  IAttributes.h  IBillboardSceneNode.h  IBoneSceneNode.h  ICameraSceneNode.h  IContextManager.h  ICursorControl.h  IDummyTransformationSceneNode.h  IEventReceiver.h  IFileArchive.h  IFileList.h  IFileSystem.h  IGPUProgrammingServices.h  IGUIButton.h  IGUICheckBox.h  IGUIComboBox.h  IGUIEditBox.h  (+87 more)
irr/media/: coolguy_opt.x
irr/scripts/: BindingGenerator.lua  ci-build-android.sh  ci-build-mingw.sh  ci-get-mingw.sh  sha256sums.txt
irr/src/: BuiltInFont.h  CAnimatedMeshSceneNode.cpp  CAnimatedMeshSceneNode.h  CAttributeImpl.h  CAttributes.cpp  CAttributes.h  CB3DMeshFileLoader.cpp  CB3DMeshFileLoader.h  CBillboardSceneNode.cpp  CBillboardSceneNode.h  CBlit.h  CBoneSceneNode.cpp  CBoneSceneNode.h  CCameraSceneNode.cpp  CCameraSceneNode.h  CColorConverter.cpp  CColorConverter.h  CDummyTransformationSceneNode.cpp  CDummyTransformationSceneNode.h  CEGLManager.cpp  CEGLManager.h  CEmptySceneNode.cpp  CEmptySceneNode.h  CFPSCounter.cpp  CFPSCounter.h  CFileList.cpp  CFileList.h  CFileSystem.cpp  CFileSystem.h  CGLTFMeshFileLoader.cpp  CGLTFMeshFileLoader.h  CGLXManager.cpp  CGLXManager.h  CGUIButton.cpp  CGUIButton.h  CGUICheckBox.cpp  CGUICheckBox.h  CGUIComboBox.cpp  CGUIComboBox.h  CGUIEditBox.cpp  (+121 more)
irr/test/: CMakeLists.txt  image_loader_test.cpp
lib/: CMakeLists.txt
lib/HACL-star/: CMakeLists.txt  LICENSE.txt
lib/THST/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  QuadTree.h  README.md  RTree.h  allocator.h  bbox.h  config.h  indexable.h  predicates.h  quad_tree_detail.h  rtree_detail.h
lib/asio/: README.md
lib/bitop/: CMakeLists.txt  bit.c  bit.cpp  bit.h
lib/catch2/: CMakeLists.txt  catch.hpp  catch_amalgamated.cpp
lib/fastnoiselite/: CMakeLists.txt  FastNoiseLite.h  README.md
lib/gmp/: CMakeLists.txt  mini-gmp.c  mini-gmp.h
lib/irrlicht/: CMakeLists.txt
lib/irrlichtmt/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
lib/jsoncpp/: CMakeLists.txt  jsoncpp.cpp
lib/lua/: CMakeLists.txt  README.md
lib/sha256/: CMakeLists.txt  cmake_config.h.in  my_sha256.h  sha256.c
lib/tiniergltf/: .gitignore  CMakeLists.txt  Readme.md  base64.cpp  base64.h  tiniergltf.hpp
minetest-gymnasium/: pyproject.toml
minetest-gymnasium/examples/: example.ipynb  pixi.toml
minetest-gymnasium/minetest/: minetest_env.py
minetest-gymnasium/tests/: minetest_test.py
minetest-gymnasium/tools/: gym_client.py
python/: pyproject.toml  setup.py
python/examples/: README.md  benchmark.ipynb  environment.yml  example.ipynb
python/minetest/: __init__.py  minetest_env.py
python/minetester/: __init__.py  minetest_env.py
python/tests/: minetest_test.py
python/tools/: gym_client.py  gym_client_headless.py  handshaker.py  minetest_client.py
src/: #clientiface.cpp#  .#clientiface.cpp  CMakeLists.txt  CXXFLAGS  ColoredString.cpp  INCLUDE_DIRS  LIBRARIES  Makefile  MineConfig.cpp  MineConfig.h  MyBillboardSceneNode.cpp  MyBillboardSceneNode.h  StaticText.cpp  actionlog.cpp  actionlog.h  activeobject.h  activeobjectmgr.h  aiplayer.cpp  aiplayer.h  areastore.cpp  areastore.h  audio.cpp  audio.h  auth.cpp  auth.h  ban.cpp  ban.h  base64.cpp  base64.h  basicmacros.h  biome.cpp  biome.h  blockSaver.cpp  blockSaver.h  blockmetadata.cpp  blockmetadata.h  callbackmanager.h  camera.cpp  camera.h  cameraparams.h  (+665 more)
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark_activeobjectmgr.cpp  benchmark_ipc_channel.cpp  benchmark_lighting.cpp  benchmark_mapblock.cpp  benchmark_mapmodify.cpp  benchmark_serialize.cpp  benchmark_setup.h  benchmark_sha.cpp
src/cguittfont/: CGUITTFont.cpp  CGUITTFont.h  CMakeLists.txt  Makefile  cmake_install.cmake  irrUString.h  xCGUITTFont.cpp  xCGUITTFont.h
src/client/: CMakeLists.txt  Makefile  PasswordManager.cpp  PasswordManager.h  activeobjectmgr.cpp  activeobjectmgr.h  camera.cpp  camera.h  client.cpp  client.h  clientauth.cpp  clientauth.h  clientenvironment.cpp  clientenvironment.h  clientevent.h  clientgamestartdata.h  clientlauncher.cpp  clientlauncher.h  clientmap.cpp  clientmap.h  clientmedia.cpp  clientmedia.h  clientobject.cpp  clientobject.h  clientsimpleobject.h  clouds.cpp  clouds.h  cmake_install.cmake  content_cao.cpp  content_cao.h  content_cso.cpp  content_cso.h  content_mapblock.cpp  content_mapblock.h  discord.cpp  discord.h  event_manager.h  (+91 more)
(+4072 files in other folders)
